--- a/css/global.css
+++ b/css/global.css
@@ -107,7 +107,7 @@ body {
 }
 
 main {
-  min-height: calc(100vh - 250px);
+  min-height: calc(100vh - 290px);
 }
 
 a {
